--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -643,13 +643,21 @@
 
 .logoImage {
   display: block;
-  width: 160px;
+  width: 132px;
   height: auto;
 }
 
 @media (max-width: 768px) {
+  .nav {
+    padding: 0 12px;
+  }
+
+  .logo {
+    margin-right: auto;
+  }
+
   .logoImage {
-    width: 138px;
+    width: 112px;
   }
 }
 .logo:hover {
